<resources>
    <string name="app_name">Imobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbCliente">Cliente</string>
    <string name="title_activity_cliente">Cadastro de Cliente</string>
    <string name="lbId">Id</string>
    <string name="lbNome">Nome</string>
    <string name="lbRg">RG</string>
    <string name="lbCpf">CPF</string>
    <string name="lbEmail">Email</string>
    <string name="lbCorretor">Corretor</string>
    <string name="lbImovel">Imóvel</string>
    <string name="lbContrato">Contrato</string>
    <string name="lbCreci">Creci</string>
    <string name="lbSalvar">Salvar</string>
    <string name="lbCancelar">Cancelar</string>
    <string name="lbAtualizar">Atualizar</string>
    <string name="lbDescricao">Descrição</string>
    <string name="lbLogradouro">Logradouro</string>
    <string name="lbBairro">Bairro</string>
    <string name="lbNumero">Número</string>
    <string name="lbComplemento">Complemento</string>
    <string name="lbComodos">Comodos</string>
    <string name="lbTerreno">Terreno</string>
    <string name="lbMobiliada">Mobiliada</string>
    <string name="lbValor">Valor</string>
    <string name="lbMeses">Meses</string>
    <string name="lbBusca">Filtro</string>
    <string name="lbNovo">Novo</string>
    <string name="lbExcluir">Excluir</string>
    <string name="lbAdicionar">Adicionar</string>
    <string name="lbTitleExclusao">Confirmação Exclusão</string>
    <string name="lbMessageExclusao">Deseja Realmente excluir o Registro ???</string>
    <string name="lbOk">Ok</string>
    <string name="lbDtContrato">Data do Contrato</string>
    <string name="title_activity_corretor">Cadastro de Corretor</string>
    <string name="title_activity_imovel">Cadastro de Imóvel</string>
    <string name="title_activity_contrato">Cadastro de Contrato</string>
    <string name="title_activity_consulta_cliente">Consulta de Clientes</string>
    <string name="title_activity_consultar_corretor">Consulta de Corretores</string>
    <string name="title_activity_consulta_contrato">ConsultaContrato</string>
</resources>
