<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContratoActivity"
    tools:showIn="@layout/activity_contrato">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_weight="2.4"
            android:id="@+id/etCodigo"
            android:hint="@string/lbId"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbCorretor"
            android:textSize="20dp"
            android:layout_weight="2.2"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/spCorretor"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbImovel"
            android:layout_marginLeft="@dimen/left_margin"
            android:textSize="20dp"
            android:layout_weight="4.5"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginRight="@dimen/right_margin"
            android:id="@+id/spImovel"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbCliente"
            android:layout_marginLeft="@dimen/left_margin"
            android:textSize="20dp"
            android:layout_weight="4.5"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:id="@+id/spCliente"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbContrato"
            android:layout_marginLeft="@dimen/left_margin"
            android:textSize="20dp"
            android:layout_weight="3.5"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:id="@+id/spTpContrato"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:inputType="numberDecimal"
        android:id="@+id/etValor"
        android:hint="@string/lbValor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:inputType="number"
        android:id="@+id/etMeses"
        android:hint="@string/lbMeses"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:id="@+id/tvDtContrato"
        android:text="@string/lbDtContrato"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/btSave"
            android:hint="@string/lbSalvar"
            android:drawableLeft="@drawable/ic_done"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/btCancel"
            android:hint="@string/lbCancelar"
            android:drawableLeft="@drawable/ic_error"/>

    </LinearLayout>

</LinearLayout>