<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="60dp"
        android:layout_marginLeft="5dp"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvIdCorretor"
        android:textAlignment="center"
        android:text="@string/lbId"/>

    <TextView
        android:layout_width="180dp"
        android:textSize="18dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_height="wrap_content"
        android:id="@+id/tvNomeCorretor"
        android:text="@string/lbNome"/>

    <TextView
        android:layout_width="match_parent"
        android:textSize="18dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_height="wrap_content"
        android:id="@+id/tvCreciCorretor"
        android:text="@string/lbCreci"/>

</LinearLayout>