<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ImovelActivity"
    tools:showIn="@layout/activity_imovel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_weight="1"
            android:id="@+id/etCodigo"
            android:hint="@string/lbId"
            android:enabled="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="0.2"
            android:id="@+id/etDescricao"
            android:hint="@string/lbDescricao"/>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:id="@+id/etLogradouro"
        android:hint="@string/lbLogradouro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_weight="1"
            android:id="@+id/etBairro"
            android:hint="@string/lbBairro"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="0.8"
            android:inputType="number"
            android:id="@+id/etNumero"
            android:hint="@string/lbNumero"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/right_margin"
        android:id="@+id/etComplemento"
        android:hint="@string/lbComplemento"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/etComodos"
            android:hint="@string/lbComodos"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="0.8"
            android:inputType="number"
            android:id="@+id/etTerreno"
            android:hint="@string/lbTerreno"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/cbMobiliada"
            android:hint="@string/lbMobiliada"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/btAdd"
            android:hint="@string/lbAdicionar"
            android:drawableLeft="@drawable/ic_add"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/btSave"
            android:hint="@string/lbSalvar"
            android:drawableLeft="@drawable/ic_done"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_weight="1"
            android:id="@+id/btCancel"
            android:hint="@string/lbCancelar"
            android:drawableLeft="@drawable/ic_error"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="70dp"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:id="@+id/ivImovel"
                android:background="@mipmap/ic_home"/>

            <TextView
                android:layout_width="70dp"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/tvCodigoImovel"
                android:textColor="@color/colorWhite"
                android:text="@string/lbId"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="@dimen/fab_margin"
                android:id="@+id/tvDescImovel"
                android:textColor="@color/colorWhite"
                android:text="@string/lbDescricao"/>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:listSelector="@color/colorAqua"
            android:id="@+id/lvImovel"/>

    </LinearLayout>

</LinearLayout>